<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">crinklaw-notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="createClaim">Create Claim</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="editClaim">Edit Claim</string>
    <string name="createExpense">Add Expense</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="amountSpent">Amount Spent</string>
    <string name="currency">Currency</string>
    <string name="submit">Submit/Unsubmit Claim</string>
    <string name="claims">Claims</string>
    <string name="totalAmount">Total Amount</string>
    <string name="expenses">Expenses</string>    
    <string name="emptyString"></string>    
    <string name="emailAddress">Email Address</string>    
    <string name="approved">Mark as Approved</string>

</resources>
